# End-Point-Search

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_EPS.sh  build_visibility_graph.cpp  clean_index.sh  construct_cpd.cpp  preprocessing.sh  testEPS.cpp
helpers/: timer.cpp
search/: eps.h  epsSearchInstance.cpp  epsSearchInstance.h  searchinstance.cpp  searchinstance.h  visibleSearchInstance.cpp  visibleSearchInstance.h
structs/: graph.cpp  mesh.h
